--- a/BackgroundDesktopApplication/packages.config
+++ b/BackgroundDesktopApplication/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="DotNetKit.Wpf.AutoCompleteComboBox" version="1.3.3" targetFramework="net472" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net472" />
   <package id="Google.Apis" version="1.51.0" targetFramework="net472" />
   <package id="Google.Apis.Auth" version="1.51.0" targetFramework="net472" />
